<resources>
    <string name="app_name">KingEconomy</string>
    <string name="hint_input_mobile">请输入手机号</string>
    <string name="hint_input_password">密码</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="text_forget_password">找回密码</string>
    <string name="hint_input_verification_code">请输入验证码</string>
    <string name="text_next">下一步</string>
    <string name="et_password_tip">请输入6-16位数字或字母</string>
    <string name="et_password_again">请再次输入密码</string>
    <string name="btn_register">注册</string>
    <string name="text_send_code">获取验证码</string>
    <string name="btn_submit">提交</string>
    <string name="text_no_login">游客试用</string>
    <string name="text_other_login">其他方式登录</string>
    <string name="text_store_code">经济门店编码</string>
    <string name="hint_broker_name">经济人真实姓名</string>
    <string name="s_have_code">有编码</string>
    <string name="s_no_code">无编码</string>
    <string name="tv_city">城市</string>
    <string name="et_input_store_name">输入门店名</string>
    <string name="tv_upload_card">上传名片</string>
    <string name="btn_submit_Auditing">提交审核</string>
    <string name="tv_tips">1.加入门店编码后，结佣事项将与该门店关联。\n 2.若不知门店编码，可试试询问同事、门店负责人。</string>
    <string name="tv_upload_tips">上传名片的正反面照片，注意不能反光，不能模糊，不能边缘缺失</string>
    <string name="s_take_picture">拍照</string>
    <string name="s_cancel">取消</string>
    <string name="s_id_card_name">填写真实姓名</string>
    <string name="s_id_card_code">填写身份证号码</string>
    <string name="s_id_card_picture">身份证照片</string>
    <string name="s_id_card_tips">注意不能反光，不能模糊，不能边缘缺失，不能超过5M务必本人手持</string>
    <string name="s_project_name">选择项目名称</string>
    <string name="s_account_name">客户姓名</string>
    <string name="s_account_mobile">客户电话</string>
    <string name="s_tips_3">前三位</string>
    <string name="s_tips_4">后四位</string>
    <string name="s_time">预计上客时间</string>
    <string name="s_report_city">填写出发城市</string>
    <string name="s_people_num">填写出行人数</string>
    <string name="s_train_type">到访方式</string>
    <string name="s_report_car">自驾</string>
    <string name="s_report_bus">班车</string>
    <string name="s_report_other">其他</string>
    <string name="s_provide_Lunch">提供午餐</string>
    <string name="s_yes">是</string>
    <string name="s_no">否</string>
    <string name="s_report_submit">确认添加</string>
    <string name="s_all">全部</string>
    <string name="s_ready_come">待上客</string>
    <string name="s_wait_deal">待成交</string>
    <string name="s_finish">已完成</string>
    <string name="s_failed">已流失</string>
    <string name="s_review">加入门店审核中审核周期1个工作日，请耐心等待...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="s_wirte_tip">只填写地级城市，例：杭州</string>
    <string name="s_guess_like">猜你喜欢</string>
    <string name="s_city">城市</string>
    <string name="s_total_money">总价</string>
    <string name="s_type">类型</string>
    <string name="s_filter">筛选</string>
    <string name="s_price_range">自定义价格区间(万元）</string>
    <string name="s_report_user">APP提前半个小时报备，系统提示成功后经纪人处每位客户有一个识别二维码，一个客户可被多个经纪人报备，项目负责人：张三 13512345678</string>
    <string name="s_user_come">客户需要在三天内带看，确认客户有效后扫码进入30天客户保护期</string>
    <string name="s_user_buy">1.提交申请，后台审核； 2.成交佣金：1-200平方按140000万元整/套结算： 3.结算方式：客户付完首付并签订完成《商品房购销合同》放款后由代理公司结算佣金。</string>
    <string name="s_single_report">报备</string>
    <string name="s_more_report">批量报备</string>
    <string name="s_lunch_people">填写用餐人数</string>
</resources>
