<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context="com.example.hugy.kingeconomy.view.IdentityCardActivity">

    <include layout="@layout/tool_bar"/>
    <EditText
        android:id="@+id/et_id_name"
        style="@style/et_base_style"
        android:hint="@string/s_id_card_name"
        android:inputType="text"
        android:minLines="1"
        android:theme="@style/et_underline_style"/>
    <EditText
        android:id="@+id/et_id_code"
        style="@style/et_base_style"
        android:hint="@string/s_id_card_code"
        android:inputType="text"
        android:minLines="1"
        android:theme="@style/et_underline_style"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_id_card_picture"
        android:textColor="@color/font_gray"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:textSize="16sp" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/id_card"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/s_id_card_tips"
        android:textColor="@color/font_no_click"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_submit_broker_no_code"
        style="@style/btn_color_style"
        android:text="@string/btn_submit_Auditing" />
</LinearLayout>
