<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hugy.kingeconomy.view.activity.OrderActivity">

    <include layout="@layout/tool_bar" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/base_white"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rd_all"
            style="@style/radio_option"
            android:checked="true"
            android:text="@string/s_all" />

        <RadioButton
            android:id="@+id/rd_wait_come"
            style="@style/radio_option"
            android:text="@string/s_ready_come" />

        <RadioButton
            android:id="@+id/rd_wait_deal"
            style="@style/radio_option"
            android:text="@string/s_wait_deal" />

        <RadioButton
            android:id="@+id/rd_finish"
            style="@style/radio_option"
            android:text="@string/s_finish" />

        <RadioButton
            android:id="@+id/rd_fail"
            style="@style/radio_option"
            android:text="@string/s_failed" />

    </RadioGroup>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/srl_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_order_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>
