<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_authentic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    tools:context="com.example.hugy.kingeconomy.view.AuthenticationActivity">

    <include layout="@layout/tool_bar" />


    <EditText
        android:id="@+id/et_broker_name"
        style="@style/et_base_style"
        android:hint="@string/hint_broker_name"
        android:inputType="text"
        android:minLines="1"
        android:theme="@style/et_underline_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/text_store_code"
            android:textColor="@color/font_black_label"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rg_code_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_have_code"
                style="@style/radio_style"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/s_have_code" />

            <RadioButton
                android:id="@+id/rb_no_code"
                style="@style/radio_style"
                android:layout_weight="1"
                android:text="@string/s_no_code" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_no_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/tv_city"
                android:textColor="@color/font_black_label"
                android:textSize="16sp" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/base_white"
                android:src="@mipmap/icon_more_unfold" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_store_name"
            style="@style/et_base_style"
            android:hint="@string/et_input_store_name"
            android:inputType="text"
            android:minLines="1"
            android:theme="@style/et_underline_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_upload_card"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:adjustViewBounds="true"
                android:maxHeight="85dp"
                android:maxWidth="200dp"
                android:id="@+id/iv_front_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/front_card" />

            <ImageView
                android:adjustViewBounds="true"
                android:maxHeight="85dp"
                android:maxWidth="200dp"
                android:id="@+id/iv_back_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/reverse_side_card" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tv_upload_tips"
            android:textColor="@color/font_no_click"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_submit_broker_no_code"
            style="@style/btn_color_style"
            android:text="@string/btn_submit_Auditing" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_have_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_store_code"
            style="@style/et_base_style"
            android:hint="@string/text_store_code"
            android:theme="@style/et_underline_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="5"
            android:text="@string/tv_tips"
            android:textColor="@color/font_no_click"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_submit_broker"
            style="@style/btn_color_style"
            android:layout_marginTop="50dp"
            android:text="@string/btn_submit_Auditing" />
    </LinearLayout>


</LinearLayout>
