<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_base"
    android:background="@color/base_white"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_60">

        <EditText
            android:id="@+id/et_mobile"
            style="@style/et_base_style"
            android:hint="@string/hint_input_mobile"
            android:inputType="phone"
            android:maxLength="11"
            android:minLines="1" />

        <ImageView
            android:id="@+id/iv_find_mobile_clear"
            style="@style/icon_clear_style" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_30"
        android:paddingLeft="@dimen/padding_left_15"
        android:paddingRight="@dimen/padding_right_15">

        <Button
            android:id="@+id/btn_send"
            android:layout_width="72dp"
            android:layout_height="22dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_rectangle"
            android:text="@string/text_send_code"
            android:textColor="@color/base_white"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="13dp" />
        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/hint_input_verification_code"
            android:textColorHint="@color/hint_base"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/text_size_15"
            android:theme="@style/et_underline_style" />



    </RelativeLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/btn_color_style"
        android:layout_marginTop="@dimen/margin_top_90"
        android:text="@string/text_next" />
</LinearLayout>

