<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_base"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/et_password_one"
            style="@style/et_base_style"
            android:theme="@style/et_underline_style"
            android:hint="@string/et_password_tip" />

        <ImageView
            android:id="@+id/iv_clear_text"
            style="@style/icon_clear_style" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password_two"
            style="@style/et_base_style"
            android:theme="@style/et_underline_style"
            android:layout_marginTop="30dp"
            android:hint="@string/et_password_again" />

        <ImageView
            android:id="@+id/iv_show_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_eye" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_submit"
        style="@style/btn_color_style"
        android:layout_below="@+id/et_password_two"
        android:layout_marginTop="90dp"
        android:text="@string/btn_submit"
        android:textColor="@color/base_white"
        android:textSize="16sp" />
</LinearLayout>
