<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_base"
    android:background="@color/base_white"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_60">

        <EditText
            android:id="@+id/et_password_new"
            style="@style/et_base_style"
            android:hint="@string/et_password_tip" />

        <ImageView
            android:id="@+id/iv_register_password_clear"
            style="@style/icon_clear_style" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_30">

        <EditText
            android:id="@+id/et_password_again"
            style="@style/et_base_style"
            android:hint="@string/et_password_again" />

        <ImageView
            android:id="@+id/iv_show_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_right_15"
            android:src="@mipmap/icon_eye" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/btn_color_style"
        android:layout_below="@+id/et_passwordTwo"
        android:layout_marginTop="@dimen/margin_top_90"
        android:text="@string/btn_register"
        android:textColor="@color/base_white"
        android:textSize="@dimen/text_size_16" />
</LinearLayout>

