<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hugy.kingeconomy.view.activity.FindHouseActivity">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/tool_bar" />

    <View
        android:id="@+id/cut_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/cut_line"
        app:layout_constraintTop_toBottomOf="@id/include_toolbar" />

    <RadioGroup
        android:id="@+id/rg_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/cut_line">

        <RadioButton
            android:id="@+id/rd_s_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableEnd="@drawable/selector_radio_down"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/s_city"
            android:textColor="@drawable/selector_radio_check_text" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableEnd="@drawable/selector_radio_down"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/s_total_money"
            android:textColor="@drawable/selector_radio_check_text" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableEnd="@drawable/selector_radio_down"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/s_type"
            android:textColor="@drawable/selector_radio_check_text" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableEnd="@drawable/selector_radio_down"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/s_filter"
            android:textColor="@drawable/selector_radio_check_text" />


    </RadioGroup>

    <View
        android:id="@+id/cut_line_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/cut_line"
        app:layout_constraintTop_toBottomOf="@id/rg_select" />

    <FrameLayout
        android:id="@+id/frame_select_city"
        app:layout_constraintTop_toBottomOf="@+id/cut_line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
